Updated script (chat-like setup).

--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                             <div class="message-time">4:03 PM</div>
                         </div>
                         <div class="message-body">
-                            Anyone free? Need eyes on the City of Ottawa pitch deck.
+                            Anyone free? Need eyes on the pitch deck
                         </div>
                     </div>
                     
@@ -1004,7 +1004,7 @@
                             <div class="message-time">4:09 PM</div>
                         </div>
                         <div class="message-body">
-                            I'm slammed with the rebrand launch... maybe grab an intern?
+                            I'm slammed with the rebrand launch... maybe grab an intern? Plenty of Algonquin kids available.
                         </div>
                     </div>
                     
