--- a/index.html
+++ b/index.html
@@ -1411,7 +1411,7 @@
                 <div class="student-mini-card">
                     <div class="mini-portrait"><img src="images/designer.jpg" alt="The Designer"></div>
                     <div class="mini-role">The Designer</div>
-                    <div class="mini-tagline">Builds visual systems that make sense even before you read the copy.</div>
+                    <div class="mini-tagline">Builds visuals that make sense even before you read the copy.</div>
                 </div>
                 <div class="student-mini-card">
                     <div class="mini-portrait"><img src="images/strategist.jpg" alt="The Strategist"></div>
@@ -1508,7 +1508,7 @@
             },
             designer: {
                 role: "The Designer",
-                tagline: "Builds visual systems that make sense even before you read the copy.",
+                tagline: "Builds visuals that make sense even before you read the copy.",
                 skills: "Concept-driven design, layout, making boring categories look cool.",
                 vibe: "Has strong opinions about kerning and leading. You'll appreciate it later.",
                 obsession: "Wes Anderson frames, hand-painted signs, old magazines, and much, much Pinterest usage."
